
HOW TO UPDATE?

- pip or pip3 install dearpygui --upgrade
- Read the `Breaking Changes` section (here in the changelog).
- Please report any issue!

-----------------------------------------------------------------------
 VERSION 0.2.1 WIP
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.2.1

-----------------------------------------------------------------------
 VERSION 0.2.0 (9/5/2020)
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.2.0

New Features:

- Context Managers: You can now import dearpygui.wrappers to use context
	manager versions of all containers

Changes:

- Widgets: All "add_widget" commands now return true on successful
	adding or false.

Breaking Changes:

- Container Widgets: Replaced all "end_*" commands with a single "end" command

-----------------------------------------------------------------------
 VERSION 0.1.4 (9/4/2020)
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.1.4

-data source: quick fix to ref count issue that causes crash

-----------------------------------------------------------------------
 VERSION 0.1.3 (9/4/2020)
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.1.3

- Label Text:   Quick fix to label_text setting #165

-----------------------------------------------------------------------
 VERSION 0.1.2 (9/4/2020)
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.1.2

New Features:

- Plots: Adding series will update an existing series if the names match.
         No need to clear plot #163

New Commands:
